fix: Menu z-index issue in firefox #101
After removed transform in .menu class, it works. But we don't know
why...

--- a/client/src/components/Menu/Menu.css
+++ b/client/src/components/Menu/Menu.css
@@ -8,7 +8,6 @@
   box-shadow: -2px 5px 5px black;
   z-index: 1;
   overflow-x: hidden;
-  transform: translateX(0%);
   transition: transform 0.5s;
 }
 
@@ -22,7 +21,6 @@
 
 .menu-hidden {
   transform: translateX(105%);
-  transition: transform 0.5s;
 }
 
 .close-button {
